--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           go-version: "1.25.1"
 
-      - name: run tests
+      - name: go test
         run: go  test -cover ./... 
