Added new Style-Test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,21 @@ jobs:
 
       - name: go test
         run: go test -cover ./... 
+
+  Style: # <--- TWÓJ NOWY JOB
+    name: Style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.25.1"
+
+      - name: Style 
+        run: test -z $(go fmt ./...)
+
+  
