--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,11 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -16,9 +21,15 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.1"
-          
+
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+        
       - name: Build app
-        run: scripts/buildprod.sh
+        run: ./scripts/buildprod.sh
+
+      - name: Run migrations
+        run: ./scripts/migrateup.sh 
 
       - id: auth
         uses: google-github-actions/auth@v2
